<?xml version="1.0"?>
<package format="2">
    <name>pointcloud_tools</name>
    <version>0.3.0</version>
    <description>pointcloud_tools</description>
    <maintainer email="william.talbot97@gmail.com">William Talbot</maintainer>
    <license>BSD-3_Clause</license>
    <url type="repository">https://github.com/willat343/pointcloud_tools</url>
    <author email="william.talbot97@gmail.com">William Talbot</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>convert</depend>
    <depend>eigen</depend>
    <depend>mathbox</depend>
    <depend>pcl</depend>
</package>
