<?xml version="1.0"?>
<package format="2">
    <name>pointcloud_tools_ros</name>
    <version>0.2.0</version>
    <description>Pointcloud Tools ROS</description>
    <maintainer email="william.talbot97@gmail.com">William Talbot</maintainer>
    <license>BSD-3_Clause</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>pointcloud_tools_catkin</depend>

    <depend>convert</depend>
    <depend>eigen</depend>
    <depend>message_filters</depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <depend>pcl</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_ros</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>statistics_msgs</depend>
    <depend>tf2_ros</depend>

</package>
